[package]
name = "pak-db"
version = "0.1.1"
edition = "2024"
readme = "README.md"
keywords = ["database", "serialization", "b-tree"]
description = "A read-only database format designed for speed, ease of use and data sharing."
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"
